# sms-spam-detection-mlops

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
notebooks/: sms_model_training.ipynb
sms_spam_detection/: __init__.py
sms_spam_detection/models/: predict.py  train.py
src/data/: logger.py  make_dataset.py  text_preprocessing.py
