[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sms_spam_detection"
version = "0.0.1"
description = "classifies spam and ham messages"
authors = [
  { name = "Hrishi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["sms_spam_detection"]
include = ["pyproject.toml", "sms_spam_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sms_spam_detection"]
force-sort-within-sections = true

